# token-counter

./: Cargo.toml  README.md  dist-workspace.toml
design/: tokens-cli.md
src/: counter.rs  main.rs  resolve.rs
tests/: cli.rs
tests/fixtures/: bos.json  special.json
